# oj-eval-codex-035-20260401203546

./: CMakeLists.txt
include/: MyString.hpp
src/: main.cpp
