cmake_minimum_required(VERSION 3.10)
project(problem_035_mystring CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(code src/main.cpp)
target_include_directories(code PRIVATE include)
if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
  target_compile_options(code PRIVATE -O2 -pipe)
endif()
